# aoc2023

./: .pre-commit-config.yaml  new_day.sh  pyproject.toml  tox.ini
code/: common.py  common_grid_coords.py  d07_1.py  d07_2.py  d08_1.py  d08_2.py  d09_1.py  d09_2.py  d10_1.py  d10_2.py  d11_1.py  d11_2.py  d12_1.py  d12_2.py  d12_reason.py  d12_stringeater.py  d12_thing.py  d13_1.py  d13_2.py  d14_1.py  d14_2.py  d15_1.py  d15_2.py  d16_1.py  d16_2.py  d17_1 take1.py  d17_1.py  d17_2.py  d18_1.py  d18_2.py  d19_1.py  d19_2.py  d20_1.py  d20_2.py  d21_1.py  d21_2.py  d22_1.py  d22_2.py  d23_1.py  d23_2.py  (+3 more)
d01/: d01_1.py  d01_2.py
d02/: d02_1.py  d02_2.py
d03/: d03_1 take1.py  d03_1.py  d03_2.py  out3.txt  test_03_fredrik.txt
d04/: d04_1.py  d04_2.py
d05/: d05_1.py  d05_2.py
d06/: d06_1.py  d06_2.py
testdata/: test_13b.txt
